infrastructure/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsecops-app
  namespace: devsecops-app
  labels:
    app: devsecops-app
spec:
  type: ClusterIP
  selector:
    app: devsecops-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
